; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_generic_xhci_acpi.c_generic_xhci_acpi_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_generic_xhci_acpi.c_generic_xhci_acpi_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"PNP0D10\00", align 1
@ACPI_MATCHHID_NOMATCH = common dso_local global i64 0, align 8
@ENXIO = common dso_local global i32 0, align 4
@XHCI_HC_DEVSTR = common dso_local global i32 0, align 4
@BUS_PROBE_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @generic_xhci_acpi_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @generic_xhci_acpi_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32* @acpi_get_handle(i32 %5)
  store i32* %6, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %1
  %9 = load i32*, i32** %4, align 8
  %10 = call i64 @acpi_MatchHid(i32* %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %11 = load i64, i64* @ACPI_MATCHHID_NOMATCH, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %8, %1
  %14 = load i32, i32* @ENXIO, align 4
  store i32 %14, i32* %2, align 4
  br label %20

15:                                               ; preds = %8
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @XHCI_HC_DEVSTR, align 4
  %18 = call i32 @device_set_desc(i32 %16, i32 %17)
  %19 = load i32, i32* @BUS_PROBE_DEFAULT, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %15, %13
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32* @acpi_get_handle(i32) #1

declare dso_local i64 @acpi_MatchHid(i32*, i8*) #1

declare dso_local i32 @device_set_desc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
